--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "FatherDay",
-  "version": "1.0.0",
+  "name": "what_do_you_actually_want_to_say",
+  "version": "1.1.1",
   "description": "練習用專案（？",
   "main": "index.js",
   "license": "MIT",
